# scrapy-pokedex

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: fetch_proxy_list.py  proxies.txt  scrapy.cfg
src/scrapy_pokedex/: __init__.py  items.py  loaders.py  middlewares.py  pipelines.py  settings.py
src/scrapy_pokedex/scripts/: __init__.py  constants.py  scripts.py
src/scrapy_pokedex/spiders/: pokedex_list.py
src/scrapy_pokedex/typings/scrapy_pokedex/: items.pyi  loaders.pyi  middlewares.pyi  pipelines.pyi  settings.pyi
src/scrapy_pokedex/typings/scrapy_pokedex/scripts/: __init__.pyi  constants.pyi  scripts.pyi
src/scrapy_pokedex/typings/scrapy_pokedex/spiders/: pokedex_list.pyi
src/scrapy_pokedex/typings/scrapy_pokedex/util/: constants.pyi  factory.pyi  fs.pyi  interceptor.pyi
src/scrapy_pokedex/util/: constants.py  factory.py  fs.py  interceptor.py
src/scripts/: scripts.py
src/types/scrapy_pokedex/: middlewares.pyi  settings.pyi
src/types/src/scrapy_pokedex/: middlewares.pyi
src/types/src/scripts/: scripts.pyi
src/types/src/types/scrapy_pokedex/: middlewares.pyi  pipelines.pyi  settings.pyi
src/types/src/types/scrapy_pokedex/spiders/: pokedex_list.pyi
src/types/src/types/scripts/: scripts.pyi
