[project]
name = "scrapy-pokedex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laurens van der Tas", email = "laurens.vandertas@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.2",
    "scrapy>=2.11.2",
]

[project.scripts]
main = "scrapy_pokedex:main"
run = "scripts:scripts.run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.4",
]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
]
