[project]
name = "scrapy-pokedex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laurens van der Tas", email = "laurens.vandertas@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "scrapy>=2.12.0",
]

[project.urls]
Repository = "https://github.com/LPvdT/scrapy-pokedex.git"

[project.scripts]
scrape = "scrapy_pokedex:scripts.scrape"
types = "scrapy_pokedex:scripts.types"
precommit = "scrapy_pokedex:scripts.precommit"
setup-precommit = "scrapy_pokedex:scripts.setup_precommit"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "debugpy>=1.8.9",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.2",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
]

[tool.mypy]
mypy_path = "src/typings"
namespace_packages = true
explicit_package_bases = true
